Fixed some responsive issues with the summary 'cards' in the campaign manager.  also, adjust the top arrow for smaller sizes as it was overlapping the text.

--- a/includes/style/scss/thetaste-venue.scss
+++ b/includes/style/scss/thetaste-venue.scss
@@ -8,7 +8,7 @@ $spacers: (
 		(
 			10%,
 		)
-		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 @import "../bootstrap/scss/bootstrap";
@@ -229,10 +229,10 @@ h2.col-heading_profile {
 
 /* style for scroll up arrow */
 #topbutton {
-	height: 50px;
-	width: 50px;
+	height: 40px;
+	width: 36px;
 	position: fixed;
-	right: 25px;
+	right: 4px;
 	bottom: 45px;
 	z-index: 1;
 	display: none;
@@ -501,15 +501,37 @@ body.campaign-manager {
 		font-size: 25px;
 	}
 
-	div.cols {
+	.cols,
+	.tcard,
+	.tcard-lg {
 		background-color: #f1f1f1;
 		border-radius: 1rem;
+		padding: 1.5rem;
 		transition: all 0.5s ease;
 	}
 
-	div.cols:hover {
+	.cols:hover,
+	.tcard:hover,
+	.tcard-lg:hover {
 		background-color: #cecece;
 		transition: all 0.5s ease;
+	}
+
+	.cols {
+		margin-left: 1rem;
+	}
+
+	.tcard,
+	.tcard-lg {
+		min-width: 278px;
+		margin: 0.5rem;
+	}
+
+	.tcard-lg {
+		@media (min-width: 992px) {
+			min-width: 430px;
+			margin: 0.5rem;
+		}
 	}
 
 	h3.numbers {
